feat: add page title and description

--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
 
     <link rel="stylesheet" href="/fonts/Montserrat/stylesheet.css" />
     <link rel="stylesheet" href="/css/reset.css" />
+    <link rel="stylesheet" href="/css/index.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="wrapper">
+      <h1 class="title">
+        Тарифы:
+        <span class="title_marked">есть даже бесплатный!</span>
+      </h1>
+      <span class="description">
+        Каждое коммерческое предложение, которое мы создаем, практически
+        произведение искусства. Мы всегда стараемся сделать максимум возможного,
+        но, при этом, понимаем, что потребности у всех разные. Поэтому у нас
+        есть целых четыре тарифа под любые задачи.
+      </span>
+    </div>
+  </body>
 </html>
