feat: create offers cards

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/fonts/Montserrat/stylesheet.css" />
     <link rel="stylesheet" href="/css/reset.css" />
     <link rel="stylesheet" href="/css/index.css" />
+    <link rel="stylesheet" href="/css/tariffs.css" />
   </head>
   <body>
     <div class="wrapper">
@@ -22,6 +23,91 @@
         но, при этом, понимаем, что потребности у всех разные. Поэтому у нас
         есть целых четыре тарифа под любые задачи.
       </span>
+
+      <div class="tariffs">
+        <span class="tariffs__offer tariffs__offer_free">
+          <img src="/img/free.png" alt="free tariff" class="offer__img" />
+          <h3 class="offer__title">Бесплатный</h3>
+
+          <ul class="offer__features">
+            <li class="offer__feature">-вообще ничего не надо платить</li>
+            <li class="offer__feature">-а мы ничего не делаем</li>
+          </ul>
+
+          <div class="offer__footer">
+            <div class="offer__sales offer__sales_marked">Продажи</div>
+            <div class="offer__sales">Все стабильно!</div>
+          </div>
+        </span>
+
+        <span class="tariffs__offer">
+          <img src="/img/alpha.png" alt="free tariff" class="offer__img" />
+          <h3 class="offer__title">
+            Альфа<br />
+            10 000 Р
+          </h3>
+
+          <ul class="offer__features">
+            <li class="offer__feature">-анализ рынка и конкурентов</li>
+            <li class="offer__feature">
+              -написание текстов коммерческого предложения
+            </li>
+          </ul>
+
+          <div class="offer__footer">
+            <div class="offer__sales offer__sales">+15% к продажам</div>
+            <button class="offer__btn">Заказать</button>
+          </div>
+        </span>
+
+        <span class="tariffs__offer">
+          <img src="/img/steve-jobs.png" alt="free tariff" class="offer__img" />
+          <h3 class="offer__title">
+            Стив Джобс<br />
+            30 000 Р
+          </h3>
+
+          <ul class="offer__features">
+            <li class="offer__feature">-анализ рынка и конкурентов</li>
+            <li class="offer__feature">
+              -написание текстов коммерческого предложения
+            </li>
+            <li class="offer__feature">-дизайн, за который будет не стыдно</li>
+          </ul>
+
+          <div class="offer__footer">
+            <div class="offer__sales offer__sales">+30% к продажам</div>
+            <button class="offer__btn">Заказать</button>
+          </div>
+        </span>
+
+        <span class="tariffs__offer">
+          <img
+            src="/img/wall-street.png"
+            alt="free tariff"
+            class="offer__img"
+          />
+          <h3 class="offer__title">
+            Уолл-стрит<br />
+            50 000 Р
+          </h3>
+
+          <ul class="offer__features">
+            <li class="offer__feature">
+              -анализ рынка, информации о бизнесе, конкурентов
+            </li>
+            <li class="offer__feature">
+              -написание супер продающих текстов коммерческого предложения
+            </li>
+            <li class="offer__feature">-шикарный дизайн, с авторским стилем</li>
+          </ul>
+
+          <div class="offer__footer">
+            <div class="offer__sales offer__sales">+60% к продажам</div>
+            <button class="offer__btn">Заказать</button>
+          </div>
+        </span>
+      </div>
     </div>
   </body>
 </html>
