--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/css/reset.css" />
     <link rel="stylesheet" href="/css/index.css" />
     <link rel="stylesheet" href="/css/tariffs.css" />
+    <link rel="stylesheet" href="/css/medias.css" />
   </head>
   <body>
     <div class="wrapper">
