--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Тарифы</title>
 
-    <link rel="stylesheet" href="/fonts/Montserrat/stylesheet.css" />
-    <link rel="stylesheet" href="/css/reset.css" />
-    <link rel="stylesheet" href="/css/index.css" />
-    <link rel="stylesheet" href="/css/tariffs.css" />
-    <link rel="stylesheet" href="/css/medias.css" />
+    <link rel="stylesheet" href="fonts/Montserrat/stylesheet.css" />
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="css/tariffs.css" />
+    <link rel="stylesheet" href="css/medias.css" />
   </head>
   <body>
     <div class="wrapper">
@@ -27,7 +27,7 @@
 
       <div class="tariffs">
         <span class="tariffs__offer tariffs__offer_free">
-          <img src="/img/free.png" alt="free tariff" class="offer__img" />
+          <img src="img/free.png" alt="free tariff" class="offer__img" />
           <h3 class="offer__title">Бесплатный</h3>
 
           <ul class="offer__features">
@@ -42,7 +42,7 @@
         </span>
 
         <span class="tariffs__offer">
-          <img src="/img/alpha.png" alt="free tariff" class="offer__img" />
+          <img src="img/alpha.png" alt="free tariff" class="offer__img" />
           <h3 class="offer__title">
             Альфа<br />
             10 000 Р
@@ -62,7 +62,7 @@
         </span>
 
         <span class="tariffs__offer">
-          <img src="/img/steve-jobs.png" alt="free tariff" class="offer__img" />
+          <img src="img/steve-jobs.png" alt="free tariff" class="offer__img" />
           <h3 class="offer__title">
             Стив Джобс<br />
             30 000 Р
@@ -83,11 +83,7 @@
         </span>
 
         <span class="tariffs__offer">
-          <img
-            src="/img/wall-street.png"
-            alt="free tariff"
-            class="offer__img"
-          />
+          <img src="img/wall-street.png" alt="free tariff" class="offer__img" />
           <h3 class="offer__title">
             Уолл-стрит<br />
             50 000 Р
